--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-react-parser": "^3.0.4",
     "immer": "^9.0.16",
     "isbot": "^3.6.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-click-away-listener": "^2.2.2",
     "react-dom": "^18.2.0",
