--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@remix-run/server-runtime": "*",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/lodash": "^4.14.188",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "fuse.js": "^6.6.2",
